<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Name -->
    <string name="app_name">ExpenseTracker</string>

    <string name="title_activity_splash">Loading app</string>
    <string name="title_activity_main">Main activity</string>

    <!-- Hints -->
    <string name="hint_amount">Amount</string>
    <string name="hint_description">Description</string>
    <string name="hint_date">Date</string>

    <!-- Buttons -->
    <string name="button_save_expense">Save Expense</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_export_csv">Export to CSV</string>
    <string name="add_expense">+</string>

    <!-- Labels -->
    <string name="label_notifications">Notifications</string>
    <string name="label_sum_this_month">Sum this month</string>
    <string name="label_day_average_this_month">Day average this month</string>

    <!-- Misc -->
    <string name="send_via">Send via ...</string>

    <string name="current_currency">Current currency: %1$s</string>
    <string name="notificationsON">Notifications are On</string>
    <string name="notificationsOFF">Notifications are Off</string>

    <!--Permissions-->
    <string name="permission_required">"Notifications permission required</string>
    <string name="permission_reason">This app needs permission to send you notifications.</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="permission_granted">Notification permission granted</string>


    <string name="expense_successfully_added">Expense successfully added</string>
    <string name="enter_valid_amount">Enter a valid amount</string>
    <string name="enter_description">Enter a description</string>
    <string name="pick_date">Pick a date</string>
    <string name="select_category">Select category</string>
    <string name="sure">Are you sure?</string>
    <string name="all_entered_data_will_be_missed">All entered data will be missed.</string>
    <string name="yes">Yes</string>


</resources>